Bug#42208 Falcon's ORDER BY ..LIMIT gives wrong/inconsistent results on NULL values

This patch introduces new Falcon index version.

It changes handling of multisegment keys, so binary keys that 
differ in number of trailing zeros bytes are now considered different.

Also, NULL in index is now different from 0, empty string 
(0x00) and zero length string and sorts according to SQL
standard rules, less than any other value.
(incorporated changes from Lars-Erik for Bug#42208)

INDEX_CURRENT_VERSION is now 2. Minor ODS version is increased to 5.